Change display settings pandas in data_exploration

--- a/preprocessing/notebooks/data_exploration.ipynb
+++ b/preprocessing/notebooks/data_exploration.ipynb
@@ -19,7 +19,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "sns.set_style('dark')"
+    "sns.set_style('dark')\n",
+    "\n",
+    "pd.options.display.max_rows = 999"
    ]
   },
   {
