Add trailing and leading cleaning to preprocessing nb

--- a/preprocessing/notebooks/preprocessing.ipynb
+++ b/preprocessing/notebooks/preprocessing.ipynb
@@ -47,10 +47,12 @@
    ]
   },
   {
-   "cell_type": "markdown",
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {},
+   "outputs": [],
    "source": [
-    "## Data Cleaning"
+    "df.title"
    ]
   },
   {
@@ -59,7 +61,32 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "samples = df.shape[0]"
+    "df.title = df.title.str.replace(' #39;', \"'\")\n",
+    "\n",
+    "df.description = df.description.str.replace(' #39;', \"'\")\n",
+    "df.description = df.description.str.replace(r'\\\\', ' ') # 2\n",
+    "df.description = df.description.str.replace(r'\\\\\\\\', ' ') # 180\n",
+    "df.description = df.description.str.strip(r' \\\\\\n\\t\\'\\\"')\n",
+    "\n",
+    "df.description = df.description.str.replace(r'\\s\\s+', ' ', regex=True) "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [],
+   "source": [
+    " df.title"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Data Cleaning"
    ]
   },
   {
@@ -72,10 +99,11 @@
    "source": [
     "df.drop_duplicates(subset=['description'], inplace=True)\n",
     "df.drop_duplicates(subset=['title'], inplace=True)\n",
-    "samples = len(df)\n",
     "\n",
     "df['title_remark'] = \"\"\n",
-    "df['description_start'] = \"\"\n",
+    "df['description_start_0'] = \"\"\n",
+    "df['description_start_1'] = \"\"\n",
+    "df['description_start_2'] = \"\"\n",
     "df['cleaned_description'] = \"\"\n",
     "df['location'] = \"\"\n",
     "df.shape"
@@ -84,7 +112,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [],
    "source": [
     "loc = 170\n",
@@ -98,16 +128,20 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Capture institution name at end of title\n",
-    "regex = r'(.*)\\s\\((\\w*\\.?(?:\\w+)+)\\)$'\n",
+    "title_remark_re = r'(?:.*)\\s\\((\\w*\\.?(?:\\w+)+)\\)$'\n",
+    "df['title_remark'] = df['title'].str.extract(title_remark_re)\n",
     "\n",
-    "for i in range(samples):\n",
-    "    m = re.search(regex, df.iloc[i].title)\n",
+    "\n",
+    "def clean_remark_from_title(row):\n",
+    "    regex = r'(.*)\\s\\((\\w*\\.?(?:\\w+)+)\\)$'\n",
+    "    m = re.search(regex, row)\n",
     "    if m:\n",
-    "        df.iat[i, 1] = m.group(1)\n",
-    "        df.iat[i, 3] = m.group(2)\n",
-    "        \n",
-    "df.shape"
+    "        # m = re.search(regex, row)\n",
+    "        return m.group(1)\n",
+    "    else:\n",
+    "        return row\n",
+    "    \n",
+    "df['title'] = df['title'].apply(clean_remark_from_title)"
    ]
   },
   {
@@ -116,32 +150,49 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Remove leading and trailing special characters\n",
-    "regex = r'''^\n",
-    "            \\\\\"(.*)\"\n",
-    "            |\n",
-    "            \\\\'(.*)'\n",
-    "            |\n",
-    "            '(.*)'\n",
-    "            |\n",
-    "            \"(.*)\"\n",
+    "df.title"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df.description"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "### TEST\n",
+    "\n",
+    "def clean_description(row):\n",
+    "    regex = r'''^\n",
+    "                (?:\\w*\\.?(?:\\w+)+)\n",
+    "                (?:\\s*-{1,2}\\s+)\n",
+    "                (.*)\n",
+    "                |\n",
+    "                (?:(?:\\w+\\s)+)\n",
+    "                \\((?:\\w+)\\)\n",
+    "                (?:\\s*-{1,2}\\s+)\n",
+    "                (.*)\n",
     "            '''\n",
-    "\n",
-    "for i in range(samples):\n",
-    "    m = re.search(regex, df.iloc[i].description)\n",
+    "    #regex = '(.*)\\s\\((\\w*\\.?(?:\\w+)+)\\)$'\n",
+    "    \n",
+    "    m = re.search(regex, row, re.M|re.X)\n",
+    "    \n",
     "    if m:\n",
-    "        df.iat[i, 2] = m.group(1)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "scrolled": true
-   },
-   "outputs": [],
-   "source": [
-    "df.title_remark.value_counts()"
+    "        print(m.group(1))\n",
+    "        return m.group(1)\n",
+    "    else:\n",
+    "        return row\n",
+    "    \n",
+    "    \n",
+    "df['description'] = df['description'].apply(clean_description)"
    ]
   },
   {
@@ -150,6 +201,51 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "df.description"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "desc_1_re = r'^(\\w+)(?:\\s+-{1,2}\\s+)(?:.*)'\n",
+    "df['description_start_0'] = df['description'].str.extract(desc_1_re)\n",
+    "\n",
+    "\"\"\"\n",
+    "desc_2_re = r'^(?:\\w+\\s)+\\((\\w+)\\)(?:\\s+-{1,2}\\s+)(?:.*)'\n",
+    "df['description_start_1'] = df['description'].str.extract(desc_2_re)\n",
+    "\n",
+    "desc_3_re = r'^(\\w*\\.?\\s?\\w+)+(?:\\s+-{1,2}\\s+)(?:.*)'\n",
+    "df['description_start_2'] = df['description'].str.extract(desc_3_re)\n",
+    "\"\"\"\n",
+    "\n",
+    "def clean_beginning_from_description(row):\n",
+    "    regex = r'''^\n",
+    "                (?:\\w*\\.?(?:\\w+)+)\n",
+    "                (?:\\s*+{1,2}\\s+)\n",
+    "                (.*)\n",
+    "                |\n",
+    "                (?:(?:\\w+\\s)+)\n",
+    "                \\((?:\\w+)\\)\n",
+    "                (?:\\s+-{1,2}\\s+)\n",
+    "                (.*)\n",
+    "            '''\n",
+    "    m = re.search(regex, row, re.M|re.X)\n",
+    "    if m.group(1):\n",
+    "        #print(re.search(regex, row, re.M|re.X))\n",
+    "        # m = re.search(regex, row, re.M|re.X)\n",
+    "        #print(m.groups())\n",
+    "     \n",
+    "        return m.group(1)\n",
+    "        \n",
+    "    else:\n",
+    "        return row\n",
+    "\n",
+    "# df['cleaned_description'] = df['description'].apply(clean_beginning_from_description)\n",
+    "    \n",
+    "\"\"\"\n",
     "# Capture institution (and place) at beginning of description\n",
     "regex = r'''^\n",
     "            (\\w*\\.?(?:\\w+)+)\n",
@@ -160,12 +256,13 @@
     "            \\((\\w+)\\)\n",
     "            (?:\\s-{0,2}\\s)\n",
     "            (.*)\n",
-    "            '''\n",
-    "for i in range(samples):\n",
+    "        '''\n",
+    "\n",
+    "for i in range(len(df)):\n",
     "    m = re.search(regex, df.iloc[i].description, re.M|re.X)\n",
     "    if m:\n",
     "        if m.group(1):\n",
-    "            print(m.groups())        \n",
+    "            #print(m.groups())        \n",
     "            df.iat[i, 4] = m.group(1)\n",
     "            df.iat[i, 5] = m.group(2)\n",
     "        elif m.group(3):\n",
@@ -174,43 +271,15 @@
     "            df.iat[i, 5] = m.group(5)\n",
     "            df.iat[i, 6] = m.group(3)\n",
     "#m = re.search(regex, df.iloc[3].description)\n",
-    "#print(m.groups())"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "df.cleaned_description.value_counts()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Regex test\n",
-    "\n",
-    "regex = r'''^\n",
-    "            \\\\\\\\\"(.*)\"\n",
-    "            |\n",
-    "            \\\\\\\\(.*)\n",
-    "            '''\n",
-    "\n",
-    "m = re.search(regex, r\"\\\\PC World - Developers bla bla bla some random text\", re.X)\n",
-    "\n",
-    "if m:\n",
-    "    print(m.groups())"
+    "#print(m.groups())\n",
+    "\"\"\""
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "scrolled": false
+    "scrolled": true
    },
    "outputs": [],
    "source": [
@@ -220,25 +289,37 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [],
+   "source": [
+    "df['final_description'] = df['cleaned_description'].apply(\n",
+    "    lambda x: x if len(x) > 0 else \"\"\n",
+    ")\n",
+    "\n",
+    "df.loc[df['cleaned_description'] == '', 'final_description'] = df['description']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "df.drop_duplicates(subset=['description'], inplace=True)\n",
-    "df.drop_duplicates(subset=['title'], inplace=True)\n",
-    "samples = len(df)"
+    "df.drop_duplicates(subset=['title'], inplace=True)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "scrolled": false
+    "scrolled": true
    },
    "outputs": [],
    "source": [
-    "df.institution.value_counts()\n",
-    "df.cleaned_description.value_counts()\n",
-    "df.location.value_counts()"
+    "df"
    ]
   },
   {
